Minor changes to work with java 17